--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "framer-motion": "^11.3.19",
-    "lenis": "^1.1.9",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
